@@ -11,19 +11,22 @@
 
 @BeginOperator_collgrid
 @Title     = Collect horizontal grid
-@Parameter = [names]
+@Parameter = [nx] [names]
 
 @BeginDescription
 This operator collects the data of the input files to one output file. 
 All input files need to have the same variables and the same number of timesteps on a different
-horizonal grid region. A source region must be a rectilinear longitude/latitude grid box.
+horizonal grid region. A source region must be a structured longitude/latitude grid box.
+The parameter @var{nx} needs to be specified only for curvilinear grids.
 @EndDescription
 @EndOperator
 
 
 @BeginParameter names
+@Item = nx
+INTEGER  Number of regions in x direction, only needed for curvilinear grids
 @Item = names
-STRING  Comma separated list of variable names [default: all variables]
+STRING   Comma separated list of variable names [default: all variables]
 @EndParameter
 
 
