@@ -409,10 +409,11 @@ static char *DistgridHelp[] = {
     "",
     "DESCRIPTION",
     "    This operator distributes a dataset into smaller pieces. Each output file contains a different region of the horizontal ",
-    "    source grid. A target grid region contains a regular longitude/latitude box of the source grid. Only rectilinear source ",
-    "    grids are supported by this operator. The number of different regions can be specified with the parameter nx and ny.",
-    "    The output files will be named <obase><xxx><suffix> where suffix is the filename extension derived from the file format. ",
-    "    xxx will have five digits with the number of the target region.",
+    "    source grid. A target grid region contains a structured longitude/latitude box of the source grid. Only rectilinear and",
+    "    curvilinear source grids are supported by this operator.",
+    "    The number of different regions can be specified with the parameter nx and ny. The output files will be named ",
+    "    <obase><xxx><suffix> where suffix is the filename extension derived from the file format. xxx will have five digits with ",
+    "    the number of the target region.",
     "",
     "PARAMETER",
     "    nx  INTEGER  Number of regions in x direction",
@@ -429,15 +430,17 @@ static char *CollgridHelp[] = {
     "    collgrid - Collect horizontal grid",
     "",
     "SYNOPSIS",
-    "    collgrid[,names]  ifiles ofile",
+    "    collgrid[,nx[,names]]  ifiles ofile",
     "",
     "DESCRIPTION",
     "    This operator collects the data of the input files to one output file. ",
     "    All input files need to have the same variables and the same number of timesteps on a different",
-    "    horizonal grid region. A source region must be a rectilinear longitude/latitude grid box.",
+    "    horizonal grid region. A source region must be a structured longitude/latitude grid box.",
+    "    The parameter nx needs to be specified only for curvilinear grids.",
     "",
     "PARAMETER",
-    "    names  STRING  Comma separated list of variable names [default: all variables]",
+    "    nx     INTEGER  Number of regions in x direction, only needed for curvilinear grids",
+    "    names  STRING   Comma separated list of variable names [default: all variables]",
     "",
     "NOTE",
     "    This operator needs to open all input files simultaneously.",
