@@ -3,9 +3,9 @@
 	* using CDI library version 1.7.0
 	* Version 1.7.0 released
 
-2015-07-15  Uwe Schulzweida
+2015-07-16  Uwe Schulzweida
 
-	* distgrid: added support for curvilinear grids
+	* collgrid: added support for curvilinear grids
 
 2015-06-27  Uwe Schulzweida
 
